fixed triangle overlapping issue on home page

--- a/src/components/hero/hero.styles.scss
+++ b/src/components/hero/hero.styles.scss
@@ -11,6 +11,7 @@ $main: #edf2f4;
   padding: 0 28px;
   height: 100vh;
   padding-top: 0px;
+  z-index: -2;
 
   &.darken {
     opacity: 0.55;
@@ -51,6 +52,7 @@ $main: #edf2f4;
     font-size: 1.2em;
     line-height: 35px;
     padding-bottom: 30px;
+    z-index: 1;
     .description {
       padding-bottom: 20px;
     }
@@ -62,6 +64,7 @@ $main: #edf2f4;
   .heroButtons {
     display: flex;
     justify-content: space-between;
+    z-index: 1;
   }
 
   .scrollAni {
@@ -81,6 +84,10 @@ $main: #edf2f4;
       //   animation-fill-mode: forwards;
       animation-play-state: paused;
     }
+  }
+
+  .triangle {
+    z-index: 0;
   }
 
   .triangle1 {
